# torch-mnist-nn

./: .gitignore  main.py  pyproject.toml
src/: eval.py  infer.py  model.py  playground.py  train.py  utils.py
